--- a/style.css
+++ b/style.css
@@ -6,4 +6,9 @@ p {
     text-align: center;
     font-size: 30px;
     color: rgb(221, 97, 97);
+    padding: 0;
+}
+
+#js-playerWin {
+    display: none;
 }
